# hive-metrics

./: .gitattributes  .gitignore  .gitmodules  .release-please-manifest.json  release-please-config.json
.github/workflows/: _gateway_container.yml  _gateway_lint.yml  _monitor_lint.yml  _monitor_release.yml  _monitor_test.yml  _proxy_container.yml  _proxy_coverage.yml  _proxy_lint.yml  _proxy_test.yml  _release_please.yml  ci.yml
chart/: Chart.yaml  values.yaml
chart/templates/: deployment.yaml  grafana-dashboards.yaml  ingress.yaml  service.yaml
charts/apps/: Chart.yaml  values.yaml
charts/apps/templates/: gateway.yaml  hive-metrics.yaml  otel-proxy.yaml
charts/gateway/: Chart.yaml  values.yaml
charts/gateway/templates/: _postgres.tpl  deployment.yaml  gateway-sso.yaml  postgres-config.yaml  sso.yaml
charts/hive-metrics/: Chart.yaml  values.yaml
charts/otel-proxy/: Chart.yaml  values.yaml
gateway/: CHANGELOG.md  Cargo.toml  Dockerfile
gateway/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  prometheus.yml
gateway/.devcontainer/fake_exporter/: Dockerfile  exporter.py
gateway/.sqlx/: query-319644a7923745e2f36ce88c655e74ef4129603f5d94993e8a4fb18e14469d6e.json
gateway/devx/: seed_device.sql
gateway/migrations/: 20230604120000_create_users_devices.sql
gateway/src/: main.rs
gateway/src/authz/: mod.rs  user_auth.rs
gateway/src/database/: mod.rs
hive-monitor/: CHANGELOG.md
hive-monitor/.devcontainer/: Dockerfile  devcontainer.json
hive-monitor/scripts/: lint.sh
hive-monitor/src/: main.cpp
hive-monitor/test/: test_calculator.cpp
otel-proxy/: .copier-answers.yml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  pyproject.toml
otel-proxy/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  otel-config.yaml
otel-proxy/src/: main.rs  telemetry.rs
otel-proxy/src/otel_proxy/: __main__.py  _metrics_factory.py  _types.py  _version.py  proxy.py
otel-proxy/src/otel_proxy/metrics/: _base_struct.py  temperature.py
otel-proxy/src/routes/: health_check.rs  mod.rs
otel-proxy/tests/: test_otlp_formatter.py  test_supported_metrics.py
(+11 files in other folders)
