[package]
name = "gateway"
version = "0.1.1"
edition = "2024"

[dependencies]
axum = "0.8.4"
clap = { version = "4.5.40", features = ["derive", "env"] }
opentelemetry = "0.30.0"
telemetry = "0.1.3"
tokio = { version = "1.46.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "migrate", "tls-rustls", "time", "postgres", "uuid"] }
url = "2.5.4"
uuid = {version = "1.17.0", features = ["v4"]}
serde = "1.0.219"
reqwest = "0.12.22"
