[package]
name = "otel-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.8.4" }
serde = { version ="1.0.219", features = ["derive"] }
clap = { version = "4.5.38", features = ["derive", "env"] }
opentelemetry = { version = "0.29.1", features = ["metrics"] }
opentelemetry-otlp = { version = "0.29.0", features = ["http", "metrics", "reqwest"] }
opentelemetry-stdout = { version = "0.29.0", features = ["metrics"] }
tonic = "0.13.1"
opentelemetry_sdk = { version = "0.29.0", features = ["metrics"] }
opentelemetry-semantic-conventions = "0.29.0"
serde_json = "1.0.140"
